syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ItemParam.proto";

// CmdId: 133
// EnetChannelId: 0
// EnetIsReliable: true
message TakeCompoundOutputRsp {
	int32 retcode = 12;
	repeated ItemParam item_list = 7;
}
